@@ -169,3 +169,27 @@ class Time
     return Runt::DPrecision::DEFAULT
   end
 end
+
+#
+# Useful shortcuts!
+#
+# Contributed by Ara T. Howard who is pretty sure he got the idea from 
+# somewhere else. :-)
+#
+class Numeric
+  def microseconds() Float(self  * (10 ** -6)) end
+  def milliseconds() Float(self  * (10 ** -3)) end
+  def seconds() self end
+  def minutes() 60 * seconds end
+  def hours() 60 * minutes end
+  def days() 24 * hours end
+  def weeks() 7 * days end
+  def months() 30 * days end
+  def years() 365 * days end
+  def decades() 10 * years end
+
+  %w[
+  microseconds milliseconds seconds minutes hours days weeks months years decades
+  ].each{|m| alias_method m.chop, m}
+end
+
